[package]
name = "github-db"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
base64 = "0.13.1"
bytes = "1.2.1"
log = "0.4.17"
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
url = "2.3.1"

[dev-dependencies]
anyhow = "1.0.66"
pretty_env_logger = "0.4.0"
tokio = { version = "1.21.2", features = ["full"] }
